# boxes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTE.rst  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.rst  README.txt  TODO.md  TODO.txt  box.py  box2.py  box3.py  boxes  boxes.py  bserver.py  castle.py  docker-compose.yml  drillbox.py  examples.yml  flexbox.py  flexbox2.py  flexbox3.py  flextest.py  folder.py  lamp.py  magazinefile.py  presentation.odp  printer.py  pyproject.toml  requirements.txt  requirements_dev.txt  server.bat  setup.cfg  setup.py  (+8 more)
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  new--box--generator-or-feature.md
.github/workflows/: docker-publish.yml  pages.yml  precommit.yml  smoke.yml  typing.yml
blenderboxes/: .gitignore  __init__.py  importBoxes.py  po (symlink)  todo.md  ui.py
blenderboxes/boxes/: __init__.py  edges.py  extents.py  formats.py  parts.py  pulley.py  robot.py  servos.py  vectors.py
blenderboxes/samples/: samples.sha256
boxes/: Color.py  __init__.py  args.py  dogbone.py  drawing.py  dxf.py  dxf_generator.py  edges.py  extents.py  ezdxf_generator.py  fontmanager.py  fontsettings.py  formats.py  gears.py  lids.py  notchsettings.py  parts.py  pulley.py  qrcode_factory.py  robot.py  scoresettings.py  servos.py  svg_import.py  svgmerge.py  svgutil.py  test_path.py  vectors.py  walledges.py
boxes/fonts/: README.md
boxes/generators/: ChecklistBoard.py  FillTest.py  PenHolderBox.py  __init__.py  _swtemplate.py  _template.py  _walltemplate.py  abox.py  agricolainsert.py  airpurifier.py  alledges.py  angledbox.py  angledcutjig.py  apothecarydrawerbox.py  arcade.py  atreus21.py  basedbox.py  bayonetbox.py  beequeencage.py  beequeentransportbox.py  bintray.py  birdhouse.py  bookholder.py  bottlestack.py  bottletag.py  box.py  box2.py  box3.py  box4.py  box5.py  breadbox.py  brick_sorter.py  burntest.py  caddy.py  can_storage.py  carbonfilter.py  cardbox.py  cardgametrayinsert.py  cardholder.py  castle.py  (+201 more)
boxes/scripts/: boxes_generator.py  boxes_main.py  boxes_proxy.py  (+4 more)
documentation/: API-Intro.odp  API.txt  Boxes.rst  Makefile  MyOwnBox.odp  Ramp.ggb  TODO.rst  TODO.txt  boxes.1  boxes.xml  boxesserver.1  boxesserver.xml  conf.py  edges.rst  index.rst  presentation.odp
examples/: README.rst  README.txt  generate.sh  traylayout.txt
inkex/: inkscape.txt
po/: boxes.py.pot  de.po  en.po  fr.po  readme.md  readme.txt  zanata.xml  zh_CN.po
scripts/: Dockerfile  boxes  boxes.py  boxes2inkscape  boxes2inkscape.py  boxes2inkscape1_0  boxes2pot  boxes2pot.py  boxes_example.ipynb  boxes_generator  boxes_proxy.py  boxesserver  boxesserver.py  clean_svg.sh  convertextensionstoexe.py  gen_compare.sh  gen_data.sh  gen_examples.sh  gen_sample_images.py  gen_thumbnails.sh  generate_yamls.py  generateimports.py  generatorList.py  regen_svg.py  run_smoke_test.sh  self.css  update_po.py
static/: categories.css  colors.css  fonts.css  generator.css  generator.js  machine.css  normalize.css  self.css  self.js  touch.css  touch.js
tests/: test_svg.py
(+314 files in other folders)
