[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = 'boxes'
version = '1.2'
requires-python = '>=3.10'
description = 'Boxes generator for laser cutters'
maintainers = [ { name = 'Florian Festi', email='florian@festi.info' } ]
readme = "README.rst"
keywords = ["boxes", "box", "generator", "svg", "laser cutter"]
license = "GPL-3.0-or-later"
classifiers = [ # https://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Manufacturing",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "lxml",
  "mypy",
  "pre-commit",
  "pytest>=8.1.1",
  "types-Markdown"
]
doc = ["sphinx>=8.0.2"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[project.scripts]
boxes = 'boxes.scripts.boxes_main:main'
boxesserver = 'boxes.scripts.boxesserver:main'
boxes_proxy = 'boxes.scripts.boxes_proxy:main'

[project.urls]
Homepage = "https://hackaday.io/project/10649-boxespy"
Repository = "https://github.com/florianfesti/boxes"
Documentation = "https://florianfesti.github.io/boxes/html/index.html"

[tool.codespell]
ignore-words-list = "ded,te,pathes,reencode,ontop,alledges"

[tool.mypy]
extra_checks = true
ignore_missing_imports = true
strict_bytes = true
strict_equality = true
warn_redundant_casts = true
#warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
